# greetings

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  main.yml
github/: file.yml
inc/utils/: tools.cpp  tools.h
lib/: tools.cpp
src/: greetings.cpp  hockey  table_hockey.cpp
